fix: resolve RTL layout issues in LESS

--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -236,6 +236,10 @@
 
         .cp-app-contacts-info {
             padding: 20px;
+
+            [dir='rtl'] & {
+                text-align: right;
+            }
         }
         .cp-app-contacts-header {
             background-color: @msg-bg-color-dark;
